# binding

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
cmake/: ProjectMPIR.cmake  ProjectSecp256k1.cmake
cmake/Hunter/: config.cmake
evm-binding/: CMakeLists.txt  binding.cpp
leveldb-binding/: CMakeLists.txt  binding.cc
libaleth/: CMakeLists.txt
libaleth/cmake/Hunter/: config.cmake
libaleth/libdevcore/: Address.cpp  Address.h  Base64.cpp  CMakeLists.txt  Common.cpp  Common.h  DBFactory.cpp  DBFactory.h  LevelDB.cpp  LevelDB.h
libaleth/libdevcrypto/: CMakeLists.txt  Common.cpp
libaleth/libethashseal/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashCPUMiner.cpp  GenesisInfo.cpp  GenesisInfo.h
libaleth/libethashseal/genesis/: reiDevNetwork.cpp  reiMainNetwork.cpp  reiTestNetwork.cpp
libaleth/libethcore/: AccessList.cpp  AccessList.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.h  EVMSchedule.h  Exceptions.h  Precompiled.cpp  Precompiled.h  SealEngine.cpp  SealEngine.h  TransactionBase.cpp  TransactionBase.h
libaleth/libethereum/: Account.cpp  Account.h  BlockChain.cpp  CMakeLists.txt  ChainParams.cpp  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  Message.h  State.cpp  State.h  Transaction.h  ValidationSchemes.cpp  ValidationSchemes.h
libaleth/libevm/: CMakeLists.txt  EVMC.cpp  EVMC.h  ExtVMFace.cpp  ExtVMFace.h  VMFace.h  VMFactory.cpp  VMFactory.h
src/: binding.js  index.ts
src/evm/: binding.ts  index.ts  types.ts
src/leveldown/: binding.js  index.js
test/evm/: dump.json  evm.test.js
test/leveldown/: common.js  compression-test.js  destroy-test.js  leveldown-test.js  manifest-file-size.js  port-libuv-fix-test.js  repair-test.js
